--- a/course-links.qmd
+++ b/course-links.qmd
@@ -9,13 +9,11 @@ title: "Useful links"
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Office hours               | 🔗 on [Google Sheets](https://docs.google.com/spreadsheets/d/1Mw69d1Ro-_G1Y8x7FH1wqCI04bxLpVOJ7gp8QSFGJBU/edit#gid=0)                                                                                                                                 |
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Slack                      | 🔗                                                                                                                                                                                                                                                    |
+| Slack                      | 🔗 [info511fall2024](https://info511fall2024.slack.com)                                                                                                                                                                                               |
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Class recordings           | 🔗 on Panopto                                                                                                                                                                                                                                         |
+| Class recordings           | 🔗 on [Panopto](https://arizona.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=61cffeec-57c6-4caa-a60a-b1c3017974d4)                                                                                                                    |
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Gradescope                 | 🔗 on Canvas                                                                                                                                                                                                                                          |
-+----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Gradebook                  | 🔗 on D2L                                                                                                                                                                                                                                             |
+| Gradebook                  | 🔗 on [D2L](https://d2l.arizona.edu/d2l/home/1478216)                                                                                                                                                                                                 |
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Textbooks                  | 🔗 [Data Science from Scratch](https://arizona-ua.userservices.exlibrisgroup.com/view/action/uresolver.do?operation=resolveService&package_service_id=43729147450003843&institutionId=3843&customerId=3840) (must sign-in via U of A Libraries)       |
 |                            |                                                                                                                                                                                                                                                       |
