--- a/labs/lab-6.qmd
+++ b/labs/lab-6.qmd
@@ -7,6 +7,10 @@ execute:
   error: false
 ---
 
+::: callout-important
+This is a *Team* Lab, meaning you can and should work with your project team on it.
+:::
+
 # Introduction
 
 In this lab you'll start your practice of statistical modeling.
@@ -27,7 +31,6 @@ import statsmodels.formula.api as smf
 from statsmodels.tools.eval_measures import mse
 ```
 
-
 ## Guidelines
 
 As we've discussed in lecture, your plots should include an informative title, axes should be labeled, and careful consideration should be given to aesthetic choices.
@@ -38,10 +41,35 @@ There will be periodic reminders in this assignment to remind you to **Run all, 
 You should have at least 3 commits with meaningful commit messages by the end of the assignment.
 :::
 
+All team members should clone the team GitHub repository for the lab.
+Then, one team member should edit the document Markdown cell by adding the team name to the `Team name` field and adding the names of the team members contributing to lab to the `Authors` field.
+Hopefully that's everyone, but if someone doesn't contribute during the lab session or throughout the week before the deadline, their name should not be added.
+If you have 4 members in your team, you can delete the line for the 5th team member.
+Then, this team member should render the document and commit and push the changes.
+All others should **not** touch the document at this stage.
+
+``` markdown
+# Lab 6 - Modeling I
+### Team name
+### Authors: 
+  - "Team member 1"
+  - "Team member 2"
+  - "Team member 3"
+  - "Team member 4"
+  - "Team member 5"
+### Date: ADD DATE HERE
+```
+
 Additionally, if you’re using functions that are not introduced in the course materials, you must cite your sources.
 
 ::: callout-important
 Failure to cite outside resources used, including Large Language Models like Chat GPT, is a violation of the University of Arizona [Code of Academic Integrity](https://deanofstudents.arizona.edu/policies/code-academic-integrity) and will be treated as such.
+:::
+
+::: callout-important
+Pick another member of the team write the answer to Part 1.
+All others should contribute to the discussion but only one person should type up the answer, render the document, commit, and push to GitHub.
+All others should **not** touch the document.
 :::
 
 # Part 1 - Smoking during pregnancy
@@ -65,10 +93,10 @@ c.  Now, fit a linear model that predicts `weight` from `habit`.
 
 d.  Write the estimated least squares regression line below using proper notation.
 
-    ::: callout-tip
-    If you need to type an equation using proper notation, type your answers in-between `$$` and `$$`.
-    You may use `\hat{example}` to put a hat on a character.
-    :::
+::: callout-tip
+If you need to type an equation using proper notation, type your answers in-between `$$` and `$$`.
+You may use `\hat{example}` to put a hat on a character.
+:::
 
 ## Question 2
 
@@ -83,6 +111,13 @@ c.  Interpret the intercept in the context of the data and the research question
     Why or why not?
 
 d.  Interpret the slope in the context of the data and the research question.
+
+::: callout-important
+After the team member working on Part 1 renders, commits, and pushes, another team member should pull their changes and render the document.
+Then, they should write the answer to Part 2 (up to question 5).
+All others should contribute to the discussion but only one person should type up the answer, render the document, commit, and push to GitHub.
+All others should **not** touch the document.
+:::
 
 # Part 2 - Parasites
 
@@ -125,6 +160,13 @@ c.  Visualize the relationship between the two variables.
 
 d.  Use the visualization to describe the relationship between the two variables.
 
+::: callout-important
+After the team member working on Part 2 (up to question 5) renders, commits, and pushes, another team member should pull their changes and render the document.
+Then, they should write the answer to Part 2 (questions 5-7).
+All others should contribute to the discussion but only one person should type up the answer, render the document, commit, and push to GitHub.
+All others should **not** touch the document.
+:::
+
 ## Question 4
 
 Next, model this relationship.
@@ -142,12 +184,12 @@ d.  What do you notice about the prediction (regression) line that may be strang
 Since `parsim` takes values between 0 and 1, we want to transform this variable so that it can range between (−∞,+∞).
 This will be better suited for fitting a regression model (and interpreting predicted values!)
 
-a.  Using mutate, create a new variable `transformed_parsim` that is calculated as `math.log(parsim/(1-parsim))`.
+a.  Create a new variable `transformed_parsim` that is calculated as `math.log(parsim/(1-parsim))`.
     Add this variable to your data frame.
 
-    ::: callout-note
-    `math.log()` in Python represents the **nautral log**.
-    :::
+::: callout-note
+`math.log()` in Python represents the **nautral log**.
+:::
 
 b.  Then, visualize the relationship between divergence_time and `transformed_parsim`.
     Add a regression line to your visualization.
@@ -194,6 +236,13 @@ a.  Calculate and report $R^2$ for each model fit in the previous exercise.
 b.  To answer our question of interest, would it be useful to compare the $R^2$ in each model to choose the variable that is the strongest predictor of parasite similarity?
     Why or why not?
 
+::: callout-important
+After the team member working on Part 2 (questions 5-7) renders, commits, and pushes, another team member should pull their changes and render the document.
+Then, they should write the answer to Part 3 (question 8).
+All others should contribute to the discussion but only one person should type up the answer, render the document, commit, and push to GitHub.
+All others should **not** touch the document.
+:::
+
 # Part 3 - GDP and life expectancy
 
 Gapminder is a “fact tank” that uses publicly available world data to produce data visualizations and teaching resources on global development.
@@ -222,22 +271,29 @@ a.  **Data:** For our analysis, we will only be working with data from 2007.
 b.  **Visualization:** We are interested in learning more about GDP, and we’ll start with exploring the relationship between life expectancy and GDP.
     Create two visualizations:
 
-    -   Scatter plot of `gdpPercap` vs. `lifeExp`.
+  -   Scatter plot of `gdpPercap` vs. `lifeExp`.
 
-    -   Scatter plot of `gdpPercap_log` vs. `lifeExp`, where `gdpPercap_log` is a new variable you add to the data set by taking the natural log of `gdpPercap`.
+  -   Scatter plot of `gdpPercap_log` vs. `lifeExp`, where `gdpPercap_log` is a new variable you add to the data set by taking the natural log of `gdpPercap`.
 
-    First describe the relationship between each pair of the variables.
-    Then, comment on which relationship would be better modeled using a linear model, and explain your reasoning.
+First describe the relationship between each pair of the variables.
+Then, comment on which relationship would be better modeled using a linear model, and explain your reasoning.
 
 c.  **Model fitting:**
 
-    -   Fit a linear model predicting log gross domestic product from life expectancy. Display the tidy summary.
+  -   Fit a linear model predicting log gross domestic product from life expectancy. Display the tidy summary.
 
 d.  **Model evaluation:**
 
-    -   Calculate the R-squared of the model using `.rsquared` from a model.
+  -   Calculate the R-squared of the model using `.rsquared` from a model.
 
-    -   Interpret R-squared in the context of the data and the research question.
+  -   Interpret R-squared in the context of the data and the research question.
+
+::: callout-important
+After the team member working on Part 3 (question 8) renders, commits, and pushes, another team member should pull their changes and render the document.
+Then, they should write the answer to Part 3 (questions 9-10).
+All others should contribute to the discussion but only one person should type up the answer, render the document, commit, and push to GitHub.
+All others should **not** touch the document.
+:::
 
 ## Question 9
 
@@ -250,12 +306,12 @@ a.  **Justification:** Create a scatter plot of `gdpPercap_log` vs. `lifeExp`, 
 
 b.  **Model fitting and interpretation:**
 
-    -   Regardless of your answer in part (a), fit an [additive model]{.underline} (main effects) that predicts `gdpPercap_log` from life expectancy and continent (with Africas as the baseline level).
+  -   Regardless of your answer in part (a), fit an [additive model]{.underline} (main effects) that predicts `gdpPercap_log` from life expectancy and continent (with Africas as the baseline level).
         Display a tidy summary of the model output.
 
-    -   Interpret the *intercept* of the model, making sure that your interpretation is in the units of the original data (not on log scale).
+  -   Interpret the *intercept* of the model, making sure that your interpretation is in the units of the original data (not on log scale).
 
-    -   Interpret the *slope* of the model, making sure that your interpretation is in the units of the original data (not on log scale).
+  -   Interpret the *slope* of the model, making sure that your interpretation is in the units of the original data (not on log scale).
 
 c.  **Prediction:** Predict the GDP of a country in Asia where the average life expectancy is 70 years old.
 
