--- a/ae/ae-04-flights-preprocessing.qmd
+++ b/ae/ae-04-flights-preprocessing.qmd
@@ -32,7 +32,7 @@ Fill in the blanks:
 The `flights` data frame has \_\_ rows.
 Each row represents a \_\_.
 
-## Exercise 2 - **Data cleaning**
+## Exercise 2 - Data cleaning
 
 Remove rows with missing values in the `arr_delay` and `distance` columns.
 
@@ -80,7 +80,7 @@ Remove rows with missing values in the `arr_delay` and `distance` columns.
 # add code here
 ```
 
--   Question: Do `arr_delay` and `distance` need to be scaled?
+-   Question: Do `arr_delay` and `distance` need to be scaled? Why?
 
 *add response here.*
 
