--- a/ae/ae-08-conditional-probability.qmd
+++ b/ae/ae-08-conditional-probability.qmd
@@ -50,23 +50,23 @@ Using the given data, calculate the probability that an individual has COVID-19 
 
 1.  **Substitute the Given Values:**
 
-    -   **Sensitivity**: $P(T | D)$ = 0.642
-    -   **Specificity**: $P(T^c | D^c)$ = 0.998
-    -   **Prevalence**: $P(D)$ = 0.087 among persons aged 10 years and older.
+    -   **Sensitivity**: $P(T | D)$ = \_\_\_
+    -   **Specificity**: $P(T^c | D^c)$ = \_\_\_
+    -   **Prevalence**: $P(D)$ = \_\_\_ among persons aged 10 years and older.
 
 2.  **Calculate the Complementary Probabilities**
 
     -   $P(T | D^c)$: Probability of a positive test given no disease.
 
-        $$P(T | D^c)=1-P(T^c | D^c)=1-0.998=0.002$$
+        $$P(T | D^c)=1-P(T^c | D^c)=$$
 
     -   $P(D^c)$: Probability of not having the disease.
 
-        $$P(D^c) = 1-P(D)=1-0.087=0.913$$
+        $$P(D^c) = 1-P(D)$$
 
 3.  **Calculate the Probability of a Positive Test** $P(T)$:
 
-$$P(T)=(0.642⋅0.087)+(0.002⋅0.913)=0.055854+0.001826=0.05768$$
+$$P(T)=$$
 
 4.  **Calculate the Posterior Probability** $P(D | T)$
 
@@ -75,15 +75,7 @@ P(D | T)=\frac{P(T | D) ⋅ P(D)}{P(T | D) ⋅ P(D) + (1-P(T^c | D^c)) ⋅ (1-P(
 $$
 
 $$
-P(D | T)=\frac{0.642⋅ 0.087}{(0.642⋅0.087)+(0.002⋅0.913)}
-$$
-
-$$
-P(D | T)=\frac{0.055854}{(0.055854)+(0.001826)}
-$$
-
-$$
-P(D | T)=\frac{0.055854}{0.05768}\approx0.968
+=
 $$
 
 ### Discussion Questions:
@@ -92,70 +84,28 @@ $$
 
     -   Considering the given sensitivity, specificity, and prevalence, is the high probability of having the disease given a positive test result unexpected? Why or why not?
 
-The calculation is not particularly surprising given the sensitivity, specificity, and prevalence rates.
-The high probability (96.8%) of having the disease given a positive test result is consistent with the relatively high prevalence (8.7%) and the high specificity (99.8%).
-The high specificity means there are very few false positives, which, when combined with a reasonable sensitivity, leads to a high positive predictive value in this context.
+*Add response here.*
 
 2.  **What is the explanation?**
 
     -   Explain why the probability of having the disease given a positive test result is so high. Consider the impact of sensitivity, specificity, and prevalence.
 
-The high probability of having the disease given a positive test result is due to the following factors:
-
--   **High Specificity (99.8%)**: This means the test accurately identifies those without the disease, resulting in very few false positives.
-
--   **Sensitivity (64.2%)**: This means the test correctly identifies a significant proportion of those with the disease, although not perfect.
-
--   **Prevalence (8.7%)**: With a relatively high prevalence in the population, the number of true positives is substantial compared to false positives.
-    As a result, a positive test result is more likely to be a true positive.
+*Add response here.*
 
 3.  **Was this calculation actually reasonable to perform?**
 
     -   Discuss whether it is reasonable to calculate the probability of having the disease based on the given data. Are there any limitations or assumptions in this calculation?
 
-The calculation is reasonable and based on established statistical principles.
-However, there are limitations and assumptions:
-
--   **Assumption of Representative Sample**: It assumes the sample used to derive sensitivity, specificity, and prevalence is representative of the broader population.
-
--   **Constant Sensitivity and Specificity**: It assumes sensitivity and specificity are constant across different subgroups and testing conditions.
-
--   **Accuracy of Input Data**: The accuracy of the probability calculation depends on the accuracy of the sensitivity, specificity, and prevalence rates provided.
+*Add response here.*
 
 4.  **What if we tested in a different population, such as high-risk individuals?**
 
     -   How might the probability of having the disease given a positive test result change if the test was administered to a population with a higher prevalence of COVID-19?
 
-If the test was administered to a high-risk population with a higher prevalence, the probability of having the disease given a positive test result would increase.
+*Add response here.*
 
 5.  **What if we were to test a random individual in a county where the prevalence of COVID-19 is approximately 25%?**
 
     -   Recalculate the probability of having the disease given a positive test result for a population with a 25% prevalence of COVID-19. How does this compare to the original calculation?
 
-Using the same steps as above, with $P(D)=0.25$:
-
-1.  **Complementary Probabilities**
-    -   $P(T | D^c) = 0.002$
-
-    -   $P(D^c) = 1 - 0.25 = 0.75$
-2.  **Probability of a Positive Test** $P(T)$:
-
-$$
-P(T) = (0.642 ⋅ 0.25) + (0.002 ⋅ 0.75) = 0.1605 + 0.0015 = 0.16
-$$
-
-3.  **Posterior Probability** $P(D | T)$:
-
-$$
-P(D|T) = \frac{0.642 ⋅ 0.25}{(0.642 ⋅ 0.25) + (0.002 ⋅ 0.75)}
-$$
-
-$$
-P(D|T) = \frac{0.1605}{(0.1605) + (0.0015)}
-$$
-
-$$
-P(D|T) = \frac{0.1605}{0.162}\approx0.991
-$$
-
-The probability is only slightly higher: Scenario 1 = 96.8%; Scenario 2 = 99.1% probability of having COVID-19
+*Add response here.*
