--- a/labs/lab-4.qmd
+++ b/labs/lab-4.qmd
@@ -144,18 +144,18 @@ Of the individuals that are 50+, 271 individuals responded that they would vote 
 
 a.  Fill in the code below to create a two-way table that summarizes these data.
 
-    ```{python}
-    #| eval: false
+```{python}
+#| eval: false
 
-    survey_counts = pd.DataFrame({
-        'age': ['18-49', '18-49', '18-49', '50+', '50+', '50+'],
-        'vote': ['Donald Trump', 'Joe Biden', 'Undecided', 'Donald Trump', 'Joe Biden', 'Undecided'],
-        'n': [238, 237, 507-238-237, 271, 228, 271+228-271-228]
-    })
+survey_counts = pd.DataFrame({
+  'age': [],
+  'vote': [],
+  'n': []
+  })
 
-    survey_pivot = survey_counts.pivot(index='age', columns='vote', values='n')
-    survey_pivot
-    ```
+survey_pivot = survey_counts.pivot(index='___', columns='___', values='___')
+survey_pivot
+```
 
 For parts b-d below, use a your response single pipeline starting with `survey_counts`, calculate the desired proportions, and make sure the result is an **ungrouped** data frame with a column for relevant counts, a column for relevant proportions, and a column for the groups you're interested in.
 
@@ -169,12 +169,12 @@ d.  Calculate the proportions of individuals in this sample who are planning to 
 
 a.  Re-create the following visualization that displays relationship between `age` and `vote`.
 
-    ![](images/surveyusa-trump-biden.png){width="500"}
+![](images/surveyusa-trump-biden.png){width="500"}
 
-    ::: callout-tip
-    The colors used in the plot are `"#E81B23"`, `"#0015BC"`, and `"#808080"`.
-    The theme is `sns.set_theme(style="whitegrid")`
-    :::
+::: callout-tip
+The colors used in the plot are `"#E81B23"`, `"#0015BC"`, and `"#808080"`.
+The theme is `sns.set_theme(style="whitegrid")`
+:::
 
 b.  Based on your calculations so far, as well as your visualization, write 1-3 sentences that describe the relationship, in this sample, between age and plans for presidential vote.
 
