--- a/labs/lab-5.qmd
+++ b/labs/lab-5.qmd
@@ -46,25 +46,23 @@ You should have at least 3 commits with meaningful commit messages by the end of
 # Getting started
 
 All team members should clone the team GitHub repository for the lab.
-Then, one team member should edit the document Markdown cell by adding the team name to the `subtitle` field and adding the names of the team members contributing to lab to the `author` field.
+Then, one team member should edit the document Markdown cell by adding the team name to the `Team name` field and adding the names of the team members contributing to lab to the `Authors` field.
 Hopefully that's everyone, but if someone doesn't contribute during the lab session or throughout the week before the deadline, their name should not be added.
 If you have 4 members in your team, you can delete the line for the 5th team member.
 Then, this team member should render the document and commit and push the changes.
 All others should **not** touch the document at this stage.
 
-``` yaml
-title: "Lab 5 - Probability and Simpson’s Paradox"
-subtitle: "Team name"
-author: 
+
+``` markdown
+# Lab 5 - Probability and Simpson’s Paradox
+### Team name
+### Authors: 
   - "Team member 1"
   - "Team member 2"
   - "Team member 3"
   - "Team member 4"
   - "Team member 5"
-format: pdf
-editor: visual
-execute:
-  echo: fenced
+### Date: ADD DATE HERE
 ```
 
 # Questions
@@ -144,7 +142,7 @@ You will be investigating data for the months June, July, September, and Novembe
 Below is a list of variables and their definitions:
 
 | Variable  | Definition                                                                     |
-|-----------------|-------------------------------------------------------|
+|------------------|------------------------------------------------------|
 | `season`  | Numerical representation of Spring (2), Summer (3), and Fall (4)               |
 | `year`    | Numerical representation of 2011 (0) or 2012 (1)                               |
 | `month`   | Month in which data were collected                                             |
@@ -155,7 +153,7 @@ Below is a list of variables and their definitions:
 
 ### Question 7
 
-(a) Read in the data.
+(a) Read in the `bike` data.
     Then, create a scatter plot that investigates the relationship between the number of bikes rented and the temperature outside.
     Include a straight line of best fit to help discuss the discovered relationship.
     Summarize your findings in 2-3 sentences.
